[project]
name = "rag-with-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "openai>=2.9.0",
    "pymongo>=4.15.5",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
]
